@@ -1,5 +1,5 @@
 [comment {-*- tcl -*- doctools manpage}]
-[vset VERSION 0.3]
+[vset VERSION 0.4]
 [manpage_begin math::filters n [vset VERSION]]
 [keywords digital]
 [keywords filtering]
@@ -14,9 +14,15 @@
 [description]
 [para]
 The [package math::filters] package implements digital filters,
-notably Butterworth low-pass and high-pass filters. The procedures
+notably Butterworth and Chebyshev low-pass and high-pass filters. The procedures
 allow to filter an entire data series as well as filter data one
 by one.
+
+Note: [url https://en.wikipedia.org/wiki/Digital_filter] and other pages on Wikipedia describe
+the principles and design considerations of these digital filters.
+
+Note: This is a reimplementation compared to version 0.3, which was based on GPL-licensed code.
+One possible incompatibility with that version is that the order now needs to be even.
 
 
 [section "PROCEDURES"]
@@ -27,19 +33,14 @@ The package defines the following public procedures:
 
 [call [cmd ::math::filters::filterButterworth] [arg lowpass] [arg order] [arg samplefreq] [arg cutofffreq]]
 
-Determine the coefficients for a Butterworth filter of given order. The coefficients are returned as
-a list of the x-coefficients, the y-coefficients and the scale. The formula is (n is the filter order):
-[example {
-                   n             n
-    scale * y_k = sum x_(k-i) + sum y_(k-i)
-                  i=0           i=1
-}]
+Determine the coefficients for a Butterworth filter of given (even) order. The coefficients are returned as
+a nested list, suitable for the [term filter] command or method,
 
 [list_begin arguments]
 [arg_def bool lowpass] Generate a low-pass filter (1) or a high-pass filter (0)
-[arg_def integer lowpass] The order of the filter to be generated
+[arg_def integer order] The order of the filter to be generated - it must be even
 [arg_def double samplefreq] Sampling frequency of the data series
-[arg_def double cutofffreq] Cut-off frequency for the filter
+[arg_def double cutofffreq] Cut-off frequency for the filter (at most half the sampling frequency)
 [list_end]
 
 
@@ -53,7 +54,32 @@ Filter the entire data series based on the filter coefficients.
 [list_end]
 
 
-[call [cmd ::math::filters::filterObj] new [arg coeffs] [arg yinit]]
+[call [cmd ::math::filters::filterChebyshev] [arg lowpass] [arg order] [arg samplefreq] [arg cutofffreq] [opt epsilon]]
+
+Determine the coefficients for a Chebyshev filter of given (even) order. The coefficients are returned as
+a nested list, suitable for the [term filter] command or method, For this type of filters an extra parameter
+can be given, the so-called ripple factor. This controls the smoothness of the gain factor.
+
+[list_begin arguments]
+[arg_def bool lowpass] Generate a low-pass filter (1) or a high-pass filter (0)
+[arg_def integer order] The order of the filter to be generated - it must be even
+[arg_def double samplefreq] Sampling frequency of the data series
+[arg_def double cutofffreq] Cut-off frequency for the filter (must be less than half the sampling frequency)
+[opt_def double epsilon] Ripple factor, defaults to 0.1
+[list_end]
+
+
+[call [cmd ::math::filters::filter] [arg coeffs] [arg data]]
+
+Filter the entire data series based on the filter coefficients.
+
+[list_begin arguments]
+[arg_def list coeffs] List of coefficients as generated by [emph filterButterworth] (or in fact any similar list of coefficients)
+[arg_def list data] Data to be filtered
+[list_end]
+
+
+[call [cmd ::math::filters::filterObject] new [arg coeffs] [arg yinit]]
 
 Create a filter object. The initial x data are taken as zero. The initial y data can be prescribed. If they are not given,
 they are taken as zero as well.
