@@ -6,8 +6,8 @@
 # -------------------------------------------------------------------------
 
 source [file join \
-	[file dirname [file dirname [file join [pwd] [info script]]]] \
-	devtools testutilities.tcl]
+        [file dirname [file dirname [file join [pwd] [info script]]]] \
+        devtools testutilities.tcl]
 
 testsNeedTcl     8.6
 testsNeedTcltest 1.0
@@ -67,25 +67,34 @@ customMatch numbers matchNumbers
 test butterworth-1.1 {low-pass, second order} -match numbers -body {
     set coeffs [::math::filters::filterButterworth 1 2 100 20]
     set result [concat {*}$coeffs]
-} -result {1.0 2.0 1.0 1.78885 -0.94793 4.84093}
+} -result {2.0 1.0 0.20657 0.36953 -0.195816}
 
 test butterworth-1.2 {high-pass, second order} -match numbers -body {
     set coeffs [::math::filters::filterButterworth 0 2 100 20]
     set result [concat {*}$coeffs]
-} -result {1.0 -2.0 1.0 0.94427 -0.50038 2.55535}
+} -result {-2.0 1.0 0.20657 0.36953 -0.195816}
+
+test chebyshev-1.1 {low-pass, second order} -match numbers -body {
+    set coeffs [::math::filters::filterChebyshev 1 2 100 20]
+    set result [concat {*}$coeffs]
+} -result {2.0 20.0 0.022604 -0.566099 -0.251249}
+
+test chebyshev-1.2 {high-pass, second order} -match numbers -body {
+    set coeffs [::math::filters::filterChebyshev 0 2 100 20]
+    set result [concat {*}$coeffs]
+} -result {-2.0 20.0 0.022604 -0.566099 -0.251249}
 
 
 # Actually filter data
 
-# 20 data, second-order filter, so 18 data returned
-test filter-1.0 {low-pass, second order, uniform series} -match numbers -body {
+test filter-1.0 {low-pass, second order, uniform series, Butterworth} -match numbers -body {
     set coeffs   [::math::filters::filterButterworth 1 2 100 20]
     set data     [lrepeat 20 1.0]
     set filtered [::math::filters::filter $coeffs $data]
     set result   [list [llength $filtered] [lindex $filtered end]]
-} -result {18 1.0}
+} -result {20 1.0}
 
-test filter-1.1 {low-pass, second order, sine series} -match numbers -body {
+test filter-1.1 {low-pass, second order, sine series, Butterworth} -match numbers -body {
     set coeffs   [::math::filters::filterButterworth 1 2 100 20]
 
     set twopi  [expr {2.0 * acos(-1.0)}]
@@ -99,6 +108,38 @@ test filter-1.1 {low-pass, second order, sine series} -match numbers -body {
 
     set filtered [lrange [::math::filters::filter $coeffs $data] end-7 end]
 } -result {0.845195 0.877086 0.905515 0.930371 0.951555 0.968984 0.982588 0.992315}
+
+test filter-2.1 {low-pass, second order, sine series, Chebyshev} -match numbers -body {
+    set coeffs   [::math::filters::filterChebyshev 1 2 100 20]
+
+    set twopi  [expr {2.0 * acos(-1.0)}]
+    set period 50
+
+    set data {}
+
+    for {set i 0} {$i < $period} {incr i} {
+        lappend data [expr {cos($twopi * ($i/1.0) / double($period))}]
+    }
+
+    set filtered [lrange [::math::filters::filter $coeffs $data] end-7 end]
+} -result {0.488962 0.593742 0.68916 0.773708 0.846055 0.905059 0.94979 0.979541}
+
+
+test filter-2.2 {high-pass, second order, sine series, Chebyshev} -match numbers -body {
+    set coeffs   [::math::filters::filterChebyshev 0 2 500 200]
+
+    set twopi  [expr {2.0 * acos(-1.0)}]
+    set period 50
+
+    set data {}
+
+    for {set i 0} {$i < $period} {incr i} {
+        lappend data [expr {cos($twopi * ($i/1.0) / double($period))}]
+    }
+
+    set filtered [lrange [::math::filters::filter $coeffs $data] end-7 end]
+} -result {-0.00144136 -0.0025429 -0.0031529 -0.00260315 -0.004107 -0.0029269 -0.00449589 -0.00327216}
+
 
 # The object interface
 
