@@ -1,3 +1,8 @@
+2025-01-04  Arjen Markus <arjenmarkus@users.sourceforge.net>
+        * filtergen.tcl: Replace the existing implementation by one based on an MIT license, add Chebyshev filters
+        * filtergen.man: Document the new Chebyshev filters
+        * filtergen.test: Added tests for the Chebyshev filters
+
 2024-11-19  Arjen Markus <arjenmarkus@users.sourceforge.net>
         * statistics.tcl: Check if the x and y values for the linear model show variation
 
